Implement OGC processes callbacks requirements
